--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li>
                     <a>
                         <span class="icon">zzzz</span>
-                        <span class="title">Brand Name</span>
+                        <span class="title">Fang</span>
                     </a>
                 </li>
 
