--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                 <li>
                     <a>
                         <span class="icon">zzzz</span>
-                        <span class="title">Brand Name</span>
+                        <span class="title">Yaya</span>
                     </a>
                 </li>
 
                 <li>
                     <a>
                         <span class="icon">zzzz</span>
-                        <span class="title">Brand Name</span>
+                        <span class="title">Ying</span>
                     </a>
                 </li>
 
