--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li>
                     <a>
                         <span class="icon">zzzz</span>
-                        <span class="title">Brand Name</span>
+                        <span class="title">Tok Kasa</span>
                     </a>
                 </li>
             </ul>
