--- a/index.html
+++ b/index.html
@@ -13,42 +13,54 @@
             <ul>
                 <li>
                     <a>
-                        <span class="icon">zzzz</span>
+                        <span class="icon">
+                            <ion-icon name="logo-apple"></ion-icon>
+                        </span>
                         <span class="title">Boboiboy</span>
                     </a>
                 </li>
 
                 <li>
                     <a>
-                        <span class="icon">zzzz</span>
+                        <span class="icon">
+                            <ion-icon name="home-outline"></ion-icon>
+                        </span>
                         <span class="title">Fang</span>
                     </a>
                 </li>
 
                 <li>
                     <a>
-                        <span class="icon">zzzz</span>
+                        <span class="icon">
+                            <ion-icon name="people-outline"></ion-icon>
+                        </span>
                         <span class="title">Yaya</span>
                     </a>
                 </li>
 
                 <li>
                     <a>
-                        <span class="icon">zzzz</span>
+                        <span class="icon">
+                            <ion-icon name="chatbubbles-outline"></ion-icon>
+                        </span>
                         <span class="title">Ying</span>
                     </a>
                 </li>
 
                 <li>
                     <a>
-                        <span class="icon">zzzz</span>
+                        <span class="icon">
+                            <ion-icon name="help-circle-outline"></ion-icon>
+                        </span>
                         <span class="title">Gopal</span>
                     </a>
                 </li>
 
                 <li>
                     <a>
-                        <span class="icon">zzzz</span>
+                        <span class="icon">
+                            <ion-icon name="settings-outline"></ion-icon>
+                        </span>
                         <span class="title">Tok Kasa</span>
                     </a>
                 </li>
