--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <span class="icon">
                             <ion-icon name="home-outline"></ion-icon>
                         </span>
-                        <span class="title">Fang</span>
+                        <span class="title">Dashboard</span>
                     </a>
                 </li>
 
@@ -34,7 +34,7 @@
                         <span class="icon">
                             <ion-icon name="people-outline"></ion-icon>
                         </span>
-                        <span class="title">Yaya</span>
+                        <span class="title">Contact</span>
                     </a>
                 </li>
 
@@ -43,7 +43,7 @@
                         <span class="icon">
                             <ion-icon name="chatbubbles-outline"></ion-icon>
                         </span>
-                        <span class="title">Ying</span>
+                        <span class="title">Message</span>
                     </a>
                 </li>
 
@@ -52,7 +52,7 @@
                         <span class="icon">
                             <ion-icon name="help-circle-outline"></ion-icon>
                         </span>
-                        <span class="title">Gopal</span>
+                        <span class="title">Help</span>
                     </a>
                 </li>
 
@@ -61,7 +61,25 @@
                         <span class="icon">
                             <ion-icon name="settings-outline"></ion-icon>
                         </span>
-                        <span class="title">Tok Kasa</span>
+                        <span class="title">Setting</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a>
+                        <span class="icon">
+                            <ion-icon name="lock-closed-outline"></ion-icon>
+                        </span>
+                        <span class="title">Password</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a>
+                        <span class="icon">
+                            <ion-icon name="log-out-outline"></ion-icon>
+                        </span>
+                        <span class="title">Sign Out</span>
                     </a>
                 </li>
             </ul>
