--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <span class="icon">
                             <ion-icon name="logo-apple"></ion-icon>
                         </span>
-                        <span class="title">Boboiboy</span>
+                        <span class="title">Brand Name</span>
                     </a>
                 </li>
 
